Bug 1912902 - Truncate labels and headings for sidebar r=sidebar-reviewers,desktop-theme-reviewers,reusable-components-reviewers,dao,hjones,jsudiaman,tgiles
Differential Revision: https://phabricator.services.mozilla.com/D218469

--- a/browser/components/sidebar/sidebar-panel-header.css
+++ b/browser/components/sidebar/sidebar-panel-header.css
@@ -2,6 +2,8 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
 
+@import url("chrome://global/skin/design-system/text-and-typography.css");
+
 .sidebar-panel-header {
   display: flex;
   justify-content: space-between;
@@ -16,6 +18,5 @@
 
   h4 {
     margin-block: var(--space-large);
-    font-size: var(--font-size-large);
   }
 }
