--- a/toolkit/content/widgets/moz-card/moz-card.css
+++ b/toolkit/content/widgets/moz-card/moz-card.css
@@ -51,6 +51,9 @@
 
 #moz-card-details {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--card-article-gap);
 }
 
 summary {
